wip install uninstall script

--- a/data/PicoWriter/v1.0.1.md
+++ b/data/PicoWriter/v1.0.1.md
@@ -1,6 +1,6 @@
 # PicoWriter v1.0.1 - Changelog
 
-Welcome to PicoWriter v1.0.1! This update introduces two major features to enhance your writing experience.
+Welcome to PicoWriter v1.0.1! This update introduces three major features to enhance your writing experience and simplify installation.
 
 ## New Features
 
@@ -32,6 +32,43 @@ PicoWriter now includes a dedicated **View Mode** for reading your content witho
 - **View Mode**: Perfect for reviewing your work, reading through chapters, or sharing your screen
 - **Edit Mode**: Use when you're ready to write or make changes to your content
 
+### Installation Script
+
+PicoWriter now includes an installation script for easy system-wide installation on Linux systems.
+
+#### Installation Features
+
+- **Automatic Installation**: Simple script-based installation to `/opt/picowriter`
+- **Launcher Integration**: Creates launcher script at `/root/command-launcher/picowriter.sh`
+- **System-Wide Command**: Installs `picowriter` command available from anywhere
+- **Clean Removal**: Includes uninstall script for complete removal
+
+#### How to Install
+
+1. Clone or download the PicoWriter repository
+2. Navigate to the repository directory
+3. Run the installation script as root:
+   ```bash
+   sudo ./install.sh
+   ```
+4. Launch PicoWriter from anywhere:
+   ```bash
+   picowriter
+   ```
+
+#### Installation Locations
+
+- **Application Files**: `/opt/picowriter/`
+- **Launcher Script**: `/root/command-launcher/picowriter.sh`
+- **System Command**: `/usr/local/bin/picowriter`
+
+#### Uninstallation
+
+To remove PicoWriter from your system:
+```bash
+sudo ./uninstall.sh
+```
+
 ### Graceful Quitting
 
 PicoWriter now includes intelligent quit handling to prevent accidental loss of unsaved work.
@@ -62,6 +99,8 @@ When quitting with unsaved changes, you'll see a "Save changes" dialog with two 
 - **Better UX**: View mode provides a distraction-free reading experience
 - **Data Protection**: Graceful quitting ensures you never lose unsaved work
 - **Mode Clarity**: Clear visual indicators show which mode you're in
+- **Easy Installation**: Simple script-based installation for system-wide deployment
+- **Professional Deployment**: Proper installation locations following Linux FHS standards
 
 ## Technical Details
 
@@ -79,6 +118,14 @@ When quitting with unsaved changes, you'll see a "Save changes" dialog with two 
 - Properly handles save and quit sequence
 - Resets unsaved changes flag after confirmation
 
+### Installation Script
+
+- Automated installation to `/opt/picowriter` following FHS standards
+- Creates launcher scripts for command-launcher integration
+- Symlinks system-wide command for easy access
+- Includes verification and error handling
+- Clean uninstallation script removes all components
+
 ## Migration Notes
 
 If you're upgrading from v1.0.0:
@@ -87,6 +134,8 @@ If you're upgrading from v1.0.0:
 - New chapters will automatically open in VIEW MODE
 - Use `Ctrl+P` to switch to EDIT MODE when ready to write
 - The quit confirmation will appear automatically when needed
+- For system-wide installation, use the new `install.sh` script
+- Manual installation (running `python3 main.py`) still works as before
 
 ## Keyboard Shortcuts Reference
 
